--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
+    "clsx": "^2.1.1",
+    "gojs": "^3.0.10",
+    "gojs-react": "^1.1.2",
+    "lucide-react": "^0.436.0",
+    "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "typescript": "^5"
   }
 }
