--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
-    "clsx": "^2.1.1",
     "gojs": "^3.0.10",
     "gojs-react": "^1.1.2",
     "lucide-react": "^0.436.0",
@@ -18,8 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "tailwind-merge": "^2.5.2"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
